fix nav bar to fit full margin

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Sumire Shinjo</title>
 </head>
 <body>
-    <nav>
+    <div id="nav">
         <a href="#aboutMe">About Me</a>
         &nbsp; | &nbsp;		
         <a href="#tech">Skills</a>
@@ -18,7 +18,7 @@
         <a href="#work">My Work</a>
         &nbsp; | &nbsp;		
         <a href="#contactMe">Contact Me</a>
-    </nav>
+    </div>
     
 <div class="content">
     <div>
