added project section

--- a/index.html
+++ b/index.html
@@ -108,6 +108,23 @@
           
     <div id="work">
         <h1>My Work Page</h1><br>
+        <br>
+        <a href="https://lens-library.herokuapp.com/">
+            <h3>Lens-Library</h3>
+            <img class="projects"src="images/Lens-Library.png" alt="project">
+        </a>
+        <a href="">
+
+            <h3>Nourish</h3>
+            <img class="projects"src="images/Nourish.png" alt="project">
+        </a>
+        <a href="">
+
+            <h3>E-Vite</h3>
+            <img class="projects"src="images/E-Vite.png" alt="project">
+        </a>
+        <h3>Memory Game</h3>
+            <img class="projects"src="images/Memory Game.png" alt="project">
     </div>
 
     <div id="contactMe">
